--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -50,30 +50,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
+    "This is an initial release of a MVP. It is missing many features that I plan to add in the future. I am also open to suggestions and pull requests.\n",
+    "\n",
+    "To activate the tool, just run the following command in your terminal:\n",
+    "\n",
+    "```sh\n",
+    "term_assist\n",
+    "```"
    ]
   },
   {
